--- a/package.json
+++ b/package.json
@@ -22,18 +22,19 @@
     "infinite-scroll": "^4.0.1",
     "lodash.throttle": "^4.1.1",
     "modern-normalize": "^1.1.0",
-    "notiflix": "^3.2.6"
+    "notiflix": "^3.2.6",
+    "simplelightbox": "^2.14.1"
   },
   "devDependencies": {
+    "@parcel/transformer-sass": "^2.6.0",
     "assert": "^2.0.0",
     "browserify-zlib": "^0.2.0",
-    "@parcel/transformer-sass": "^2.6.0",
     "buffer": "^6.0.3",
+    "events": "^3.3.0",
+    "https-browserify": "^1.0.0",
     "parcel": "^2.6.0",
     "parcel-reporter-clean-dist": "^1.0.4",
     "posthtml-include": "^1.7.4",
-    "events": "^3.3.0",
-    "https-browserify": "^1.0.0",
     "process": "^0.11.10",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
